Feat/POC-Can-Generate (#5)
* add jinja2 plugin to devcontainer

* add folder management (cleanup and recreate)

* add tailwind to libraries

* index add jinja2

* generate with jinja env up

* test navbar

* use uv run to generate project

* move generate to scripts folder

* add tailwind resources

* add just to devcontainer

* add just to workflow

* move to src

* add just to generate website

* slight changes to configs

* add just syntax

* workflow - just gen

* cleanups

--- a/.github/workflows/personalblog.yml
+++ b/.github/workflows/personalblog.yml
@@ -15,6 +15,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      
+      - uses: extractions/setup-just@v2
+        with:
+          just-version: '1.4.0'
 
       - name: Install uv
         uses: astral-sh/setup-uv@v4
@@ -24,14 +28,9 @@ jobs:
         with:
           python-version-file: "pyproject.toml"
 
-      - name: Install dependencies
-        run: |
-          uv sync
-
       - name: Generate static site
         run: |
-          # <Your Python script to generate static files> 
-          python generate_site.py
+          uv run just gen
 
       - name: Upload static files as artifact
         id: deployment
