--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,8 +8,8 @@
 		"ghcr.io/devcontainers/features/sshd:1": {},
 		"ghcr.io/va-h/devcontainers-features/uv:1": {},
 		"ghcr.io/devcontainers-extra/features/ruff:1": {},
-		"ghcr.io/devcontainers/features/rust": {},
-		"ghcr.io/devcontainers-extra/features/pre-commit": {}
+		"ghcr.io/devcontainers-extra/features/pre-commit": {},
+		"ghcr.io/guiyomh/features/just": {}
 	},
 	"runArgs": [
 		// other args
@@ -31,7 +31,9 @@
 				"KevinRose.vsc-python-indent",
 				"tamasfe.even-better-toml",
 				"usernamehw.errorlens",
-				"yzhang.markdown-all-in-one"
+				"yzhang.markdown-all-in-one",
+				"samuelcolvin.jinjahtml",
+				"nefrob.vscode-just-syntax"
 			]
 		}
 	}
