--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,14 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [project]
-name = "i-am-online"
+name = "electric_toolbox"
 version = "0.1.0"
 description = "Personal Blog"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "jinja2>=3.1.4",
+    "pytailwindcss>=0.2.0",
 ]
