Feat/content markdown (#6)
* Run local caddy with compose

* remove unecessay stuff from devcontainer json

* remove hello

* add ruff configs

* Share settings.json

* tools: improve pre-commit hooks

* style: ruff format and lint

* tools: Add Expression and Markdown to requirements

* docs: Add an example markdown

* feat: Add a listing of files function

* tools: add pydantic dependence to expression

* feat: Add init files

* feat: add posts module

* feat: file data type

* feat: update string to file function

* feat: add py.typed file

* feat: Generate calls posts

* feat: Remove dead stuff

* tools: MYPYPATH in container env vars

* tools: add stubs markdown to precommit

* tools: add github actions to devcontainer

* tools: add types markdown to requirements

* ops(package): add init files

* ops(repo): update git commits scope

* refactor(package): Restructure folders for posts and types

* feat(package): add markdown module

* refactor(package): .html instad of .j2 in jinja2 template files

* refactor: Everything dev.

* feat(package): add htmx

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,9 @@
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.sdist]
+packages = ["src"]
+
 [project]
 name = "electric_toolbox"
 version = "0.1.0"
@@ -9,6 +12,66 @@ description = "Personal Blog"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "expression[pydantic]>=5.3.0",
     "jinja2>=3.1.4",
+    "markdown>=3.7",
+    "mypy>=1.13.0",
     "pytailwindcss>=0.2.0",
+    "types-markdown>=3.7.0.20241204",
 ]
+
+[tool.ruff]
+target-version = "py312"
+# Exclude a variety of commonly ignored directories.
+exclude = [
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git",
+    ".git-rewrite",
+    ".hg",
+    ".ipynb_checkpoints",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".pyenv",
+    ".pytest_cache",
+    ".pytype",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    ".vscode",
+    "__pypackages__",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+    "node_modules",
+    "site-packages",
+    "venv",
+]
+
+# Same as Black.
+line-length = 120
+indent-width = 4
+
+[tool.ruff.lint]
+select = ["C", "D", "E", "F", "I", "W", "S", "PLC", "PLE", "PLR", "RUF"]
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
+
+[tool.ruff.format]
+quote-style = "single"
+indent-style = "space"
+docstring-code-format = true
+
+[tool.mypy]
+strict = true
+warn_unreachable = true
+disallow_untyped_calls = true
+disallow_untyped_defs = true
+disallow_untyped_decorators = true
+ignore_missing_imports = false
+follow_imports = "normal"
