--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,9 +15,7 @@
 		// other args
 		// "--volume=${localWorkspaceFolder}:/workspaces/${localWorkspaceFolderBasename}:Z"
 		// https://darkghosthunter.medium.com/making-podman-devpod-and-phpstorm-play-nice-5d50318cb212
-		"--userns=keep-id",
-		"--security-opt",
-		"label=disable"
+		"--userns=keep-id"
 	],
 	"customizations": {
 		"vscode": {
@@ -33,16 +31,20 @@
 				"usernamehw.errorlens",
 				"yzhang.markdown-all-in-one",
 				"samuelcolvin.jinjahtml",
-				"nefrob.vscode-just-syntax"
+				"nefrob.vscode-just-syntax",
+				"github.vscode-github-actions"
 			]
 		}
-	}
+	},
+	"containerEnv": {
+		"MYPYPATH": "src"
+	},
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "uv sync --all-groups"
+	"postCreateCommand": "uv sync --all-groups"
 	// Configure tool-specific properties.
 	// "customizations": {},
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
