--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,6 +4,7 @@
 	"name": "Electric Toolbox",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/python:1-3.12-bullseye",
+	"containerUser": "vscode",
 	"features": {
 		"ghcr.io/devcontainers/features/sshd:1": {},
 		"ghcr.io/va-h/devcontainers-features/uv:1": {},
@@ -15,7 +16,7 @@
 		// other args
 		// "--volume=${localWorkspaceFolder}:/workspaces/${localWorkspaceFolderBasename}:Z"
 		// https://darkghosthunter.medium.com/making-podman-devpod-and-phpstorm-play-nice-5d50318cb212
-		"--userns=keep-id"
+		
 	],
 	"customizations": {
 		"vscode": {
@@ -43,14 +44,5 @@
 	"containerEnv": {
 		"MYPYPATH": "src"	
 	},
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
-	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "uv sync --all-groups"
-	// Configure tool-specific properties.
-	// "customizations": {},
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
 }
