--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,10 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/python
 {
-	"name": "Python 3",
+	"name": "Electric Toolbox",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/python:1-3.12-bullseye",
+	"containerUser": "vscode",
 	"features": {
 		"ghcr.io/devcontainers/features/sshd:1": {},
 		"ghcr.io/va-h/devcontainers-features/uv:1": {},
@@ -15,7 +16,7 @@
 		// other args
 		// "--volume=${localWorkspaceFolder}:/workspaces/${localWorkspaceFolderBasename}:Z"
 		// https://darkghosthunter.medium.com/making-podman-devpod-and-phpstorm-play-nice-5d50318cb212
-		"--userns=keep-id"
+		
 	],
 	"customizations": {
 		"vscode": {
@@ -32,21 +33,16 @@
 				"yzhang.markdown-all-in-one",
 				"samuelcolvin.jinjahtml",
 				"nefrob.vscode-just-syntax",
-				"github.vscode-github-actions"
+				"github.vscode-github-actions",
+				"bradlc.vscode-tailwindcss",
+				"austenc.tailwind-docs",
+				"heybourn.headwind",
+				"sourcegraph.cody-ai"
 			]
 		}
 	},
 	"containerEnv": {
-		"MYPYPATH": "src"
+		"MYPYPATH": "src"	
 	},
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
-	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "uv sync --all-groups"
-	// Configure tool-specific properties.
-	// "customizations": {},
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
 }
