--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,12 @@ dependencies = [
     "types-markdown>=3.7.0.20241204",
 ]
 
+[dependency-groups]
+dev = [
+    "flask>=3.1.0",
+    "livereload>=2.7.0",
+]
+
 [tool.ruff]
 target-version = "py312"
 # Exclude a variety of commonly ignored directories.
