--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,14 @@ description = "Personal Blog"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "deepdiff>=8.1.1",
     "expression[pydantic]>=5.3.0",
     "jinja2>=3.1.4",
     "markdown>=3.7",
     "mypy>=1.13.0",
     "pytailwindcss>=0.2.0",
+    "pytest>=8.3.4",
+    "python-slugify>=8.0.4",
     "types-markdown>=3.7.0.20241204",
 ]
 
@@ -58,6 +61,9 @@ exclude = [
     "venv",
 ]
 
+
+
+
 # Same as Black.
 line-length = 120
 indent-width = 4
@@ -67,6 +73,10 @@ select = ["C", "D", "E", "F", "I", "W", "S", "PLC", "PLE", "PLR", "RUF"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
+
+# Exclude certain rules in test folder
+[tool.ruff.lint.per-file-ignores]
+"**/{tests}/*" = ["S101", "F403"]
 
 [tool.ruff.format]
 quote-style = "single"
