--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,11 @@
           "source.organizeImports.ruff": "explicit"
         }
     },
+    "[html]": {
+      "editor.suggest.insertMode": "replace",
+      "editor.defaultFormatter": "vscode.html-language-features",
+      "editor.formatOnSave": true
+    },
     "peacock.remoteColor": "#6488c7",
     "workbench.colorCustomizations": {
       "activityBar.activeBackground": "#89a5d5",
@@ -27,5 +32,10 @@
       "titleBar.activeForeground": "#15202b",
       "titleBar.inactiveBackground": "#6488c799",
       "titleBar.inactiveForeground": "#15202b99"
-    }
+    },
+    "python.testing.pytestArgs": [
+      "tests"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
