--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "mypy>=1.13.0",
     "pytailwindcss>=0.2.0",
     "pytest>=8.3.4",
+    "python-frontmatter==1.1.0",
     "python-slugify>=8.0.4",
     "types-markdown>=3.7.0.20241204",
 ]
@@ -76,7 +77,7 @@ convention = "google"
 
 # Exclude certain rules in test folder
 [tool.ruff.lint.per-file-ignores]
-"**/{tests}/*" = ["S101", "F403"]
+"**/{tests}/*" = ["S101", "F403", "PLR2004"]
 
 [tool.ruff.format]
 quote-style = "single"
