--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -49,7 +49,10 @@ repos:
         additional_dependencies: [
             "types-Jinja2>=2.11.9",
             "expression[pydantic]>=5.3.0",
-            "types-Markdown>=3.7.0.20241204"
+            "types-Markdown>=3.7.0.20241204",
+            "deepdiff>=8",
+            "pytest",
+            "types-python-slugify>=8.0.2.20240310 "
           ]
         stages: ["pre-commit"]
 
