--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "jinja2>=3.1.4",
     "markdown>=3.7",
     "mypy>=1.13.0",
+    "pygments>=2.18.0",
     "pytailwindcss>=0.2.0",
     "pytest>=8.3.4",
     "python-frontmatter==1.1.0",
@@ -61,9 +62,6 @@ exclude = [
     "site-packages",
     "venv",
 ]
-
-
-
 
 # Same as Black.
 line-length = 120
