--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,8 @@
 		"ghcr.io/devcontainers-extra/features/ruff:1": {},
 		"ghcr.io/devcontainers-extra/features/pre-commit": {},
 		"ghcr.io/guiyomh/features/just": {},
-		"ghcr.io/dhoeric/features/hadolint": {}
+		"ghcr.io/dhoeric/features/hadolint": {},
+		"ghcr.io/devcontainers/features/node": {}
 	},
 	"runArgs": [
 		// other args
@@ -42,7 +43,8 @@
 				"exiasr.hadolint",
 				"formulahendry.auto-close-tag",
 				"adrianwilczynski.alpine-js-intellisense",
-				"otovo-oss.htmx-tags"
+				"otovo-oss.htmx-tags",
+				"DavidAnson.vscode-markdownlint"
 			]
 		}
 	},
