--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
     "jinja2>=3.1.4",
     "markdown>=3.7",
     "mypy>=1.13.0",
+    "pygments>=2.18.0",
+    "pymdown-extensions>=10.13",
     "pytailwindcss>=0.2.0",
     "pytest>=8.3.4",
     "python-frontmatter==1.1.0",
