--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ requires-python = ">=3.12"
 dependencies = [
     "deepdiff>=8.1.1",
     "expression[pydantic]>=5.3.0",
+    "hypothesis>=6.123.9",
     "jinja2>=3.1.4",
     "markdown>=3.7",
     "mypy>=1.13.0",
