--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
     "mypy>=1.13.0",
     "pygments>=2.18.0",
     "pymdown-extensions>=10.13",
-    "pytailwindcss>=0.2.0",
+    "pytailwindcss==0.2.0",
     "pytest>=8.3.4",
     "python-frontmatter==1.1.0",
     "python-slugify>=8.0.4",
