--- a/.github/workflows/personalblog.yml
+++ b/.github/workflows/personalblog.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Generate static site
         run: |
           uv run scripts/generate_site.py
-          tailwindcss -i resources/main.css -o website/style.css --minify
+          uv run tailwindcss -i resources/main.css -o website/style.css --minify
 
       - name: Upload static files as artifact
         id: deployment
